--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li>
               <a href="#!"
                 ><img
-                  src=""
+                  src="" /* enter the source of your profile pic */
                   alt="profile pic"
                   class="circle"
               /></a>
